--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <source src="asset/video-indonesia.mp4" type="video/mp4" />
             </video>
             <div class="intro">
-                <h3>Visit Indonesia</h3>
+                <h3>Visit Bali Indonesia</h3>
                 <p>
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore
                 </p>
